--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -2,6 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: c */
 
+.header {
+  position: fixed;
+  z-index:1;
+}
+
 .pagination {
   text-align: center;
 }
@@ -21,6 +26,19 @@
 .tab_right2 {
   font-size: 24px;
   padding-right: 18px;
+}
+
+.google_oauth {
+  display: inline;
+  font-size: 20px;
+  font-style: italic;
+  padding-right: 0;
+}
+
+.facebook_oauth {
+  display: inline;
+  font-size: 20px;
+  font-style: italic;
 }
 
 .btn {
@@ -50,13 +68,16 @@
 }
 
 .advise {
-  font-size: 24px;
+  font-size: 20px;
   color: orange;
+  margin: 0px;
+  margin-top: 10px;
 }
 
 .commenter {
-  font-size: 20px;
+  font-size: 14px;
   text-align:right;
+  margin: 0;
 }
 
 .comments {
@@ -67,6 +88,8 @@
   right: 0;
   margin: 20px 50px 0 0;
   position :fixed;
+  padding-top: 64px;
+  width: 20%;
 }
 
 .ranking_box p {
@@ -85,9 +108,42 @@
   left: 0;
   margin: 20px 50px 0 0;
   position :fixed;
+  padding-top: 64px;
+  padding-left: 20px;
+  width: 30%;
 }
 
 .username {
  padding-right: 20px;
- font-size: 16px;
+ font-size: 20px;
+ font-style: italic;
+}
+
+.main-cards {
+  padding-top: 70px;
+  margin-bottom: 0px;
+}
+
+.card_margin {
+  margin: 0px;
+}
+
+.btn_z_index {
+  z-index: 0;
+}
+
+.new_log_form {
+  color: white;
+  font-size: 18px;
+  border: none;
+  border-bottom: 1px solid #9e9e9e;
+}
+
+.new_log_form::placeholder {
+  color: white;
+  opacity: 0.5;
+}
+
+.submit_btn {
+  margin: 0 auto;
 }
